name:                concurrency
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/concurrency#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Rock
  build-depends:       base >= 4.7 && < 5
                     , deepseq
                     , time
                     , criterion
                     , network
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -fno-warn-unused-binds
                      -fno-warn-unused-do-bind
                      -fno-warn-unused-imports
                      -fno-warn-type-defaults
                      -ferror-spans

executable concurrency-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , concurrency
  default-language:    Haskell2010

test-suite concurrency-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , concurrency
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/concurrency
